--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Caner Sezgin <ccanersezgin@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "osmtogeojson": "^3.0.0-beta.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
