--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "jest --testTimeout=30000",
+    "lint": "eslint . --ext .json,.js",
+    "lint:fix": "eslint . --ext .json,.js --fix"
   },
   "author": "Caner Sezgin <ccanersezgin@gmail.com>",
   "license": "ISC",
@@ -20,6 +23,15 @@
     "osmtogeojson": "^3.0.0-beta.4"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-semistandard": "^16.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "jest": "^27.2.4",
     "nodemon": "^2.0.13"
   }
 }
